# stox2

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
notebooks/: 00_setup.ipynb  01_baseline_model.ipynb
src/stox/: __init__.py  config.py  explore.py  frontend.py  sentiment.py  storage.py
src/stox/features/: returns.py
src/stox/ingest/: ib_fetch.py  ib_fetch_batch.py  sentiment_import.py
src/stox2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_explore.py  test_ib_fetch.py  test_returns.py  test_storage.py
